Hyperlinks on about page

--- a/www/about.html
+++ b/www/about.html
@@ -54,7 +54,7 @@ no_h1: true
 <div class="row d-flex justify-content-center">
     <div class="col-6 d-flex justify-content-center">
         <div class="card border-white my-3" style="margin:0;padding:0;width: 18rem;">
-            <img class="card-img-top px-4" src="/images/about/andrew.svg" alt="Avatar for Andrew">
+            <a href="https://andrew.marcuse.info/"><img class="card-img-top px-4" src="/images/about/andrew.svg" alt="Avatar for Andrew"></a>
             <div class="card-body">
                 <h3 class="card-title text-center" style="color:#424242;font-weight:bold;">Andrew</h3>
                 <p class="card-text text-center lead">Developer</p>
@@ -63,7 +63,7 @@ no_h1: true
     </div>
     <div class="col-6 d-flex justify-content-center">
         <div class="card border-white my-3" style="margin:0;padding:0;width: 18rem;">
-            <img class="card-img-top px-4" src="/images/about/noah.svg" alt="Avatar for Noah">
+            <a href="https://noahmarcuse.com/"><img class="card-img-top px-4" src="/images/about/noah.svg" alt="Avatar for Noah"></a>
             <div class="card-body">
                 <h3 class="card-title text-center" style="color:#424242;font-weight:bold;">Noah</h3>
                 <p class="card-text text-center lead">Designer</p>
